--- a/App/Previsor_teste3.ipynb
+++ b/App/Previsor_teste3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2966,7 +2966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -3079,7 +3079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -3247,7 +3247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -3463,7 +3463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -3639,7 +3639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -3730,7 +3730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3741,12 +3741,15 @@
     "df_ug.IdcMonitorada = df_ug.IdcMonitorada.astype(bool)\n",
     "df_ug = pd.merge(df_ug,ug_rapeel,on=list_id_ug,how='left') # poderia ser inner?\n",
     "# Remove usinas que já entraram em operação comercial ou usinas sem UGs monitoradas\n",
-    "df_ug = df_ug.loc[df_ug.DatLiberOpComerRealizado.isna() &  df_ug.NumOperacaoUg.notna()].reset_index(drop=True)"
+    "df_ug = df_ug.loc[df_ug.DatLiberOpComerRealizado.isna() &  df_ug.NumOperacaoUg.notna()].reset_index(drop=True)\n",
+    "\n",
+    "# Remove usinas que não possuem nenhuma UG monitorada\n",
+    "df_usina = df_usina[df_usina.IdeUsinaOutorga.isin(df_ug.IdeUsinaOutorga)].reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -3985,7 +3988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4053,7 +4056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4111,7 +4114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4128,7 +4131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4150,7 +4153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4163,7 +4166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4185,7 +4188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4259,7 +4262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4274,7 +4277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4298,7 +4301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -4307,7 +4310,7 @@
        "' ### include_on_script ###\\nreturn (df_usina,df_ug)\\n'"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4321,7 +4324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4329,7 +4332,7 @@
     "### start_function_vars ###\n",
     "### start_funcion_defined_vars ###\n",
     "### end_funcion_defined_vars ###\n",
-    "biu_path = biu_path\n",
+    "biu_download_path = os.path.join(biu_path,'Estagio_I')\n",
     "casos = ['I','I_a','BIU']\n",
     "\n",
     "\"\"\" ### include_on_script ###\n",
@@ -4343,20 +4346,20 @@
     "\n",
     "if 'I' in casos:\n",
     "    # Caso I\n",
-    "    file_name = os.path.join(biu_path,f\"caso_I.xlsx\")\n",
+    "    file_name = os.path.join(biu_download_path,f\"caso_I.xlsx\")\n",
     "    df_ug[df_ug.caso_I][cols_ug].to_excel(file_name,index=False)\n",
     "\n",
     "# Caso II_a\n",
     "if 'II_a' in casos:\n",
-    "    file_name = os.path.join(biu_path,f\"caso_II_a.xlsx\")\n",
+    "    file_name = os.path.join(biu_download_path,f\"caso_II_a.xlsx\")\n",
     "    df_usina[df_usina.caso_II_a][cols_revisar_IO].to_excel(file_name,index=False)\n",
     "\n",
     "if 'BIU' in casos:\n",
     "    # Caso II-b e III\n",
-    "    file_name = os.path.join(biu_path,f\"BIU.xlsx\")\n",
+    "    file_name = os.path.join(biu_download_path,f\"BIU.xlsx\")\n",
     "    df_usina[df_usina.caso_II_b | df_usina.caso_III].to_excel(file_name,index=False)\n",
     "\n",
-    "    file_name = os.path.join(biu_path,f\"Usinas_reazer_robot.xlsx\")\n",
+    "    file_name = os.path.join(biu_download_path,f\"Usinas_reazer_robot.xlsx\")\n",
     "    df_usina[df_usina.caso_II_a | df_usina.caso_II_b][['IdeUsinaOutorga']].to_excel(file_name,index=False)\n",
     "### end_function ###"
    ]
