--- a/App/ipynb_2_py.ipynb
+++ b/App/ipynb_2_py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,41 +45,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#### start_function ### function_name = ipynb_2_py\n",
+    "### start_function_vars ###\n",
+    "### start_funcion_defined_vars ###\n",
+    "save_file_name =  False #'./BIU.py'\n",
+    "overwrite = True\n",
+    "### end_funcion_defined_vars ###\n",
+    "text_file_name  =    './checar_rapeel.ipynb'  #\"./Previsor_teste3.ipynb\"\n",
+    "### end_function_vars ###\n",
+    "\n",
+    "\n",
+    "if not save_file_name:\n",
+    "    dir,file = os.path.split(os.path.abspath(text_file_name))\n",
+    "    file = file.split(\".\")[0]\n",
+    "    save_file_name = os.path.join(dir,f\"{file}.py\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Arquivo sobrescrito\n"
+      "arquivo criado...\n"
      ]
     }
    ],
    "source": [
-    "#### start_function ### function_name = ipynb_2_py\n",
-    "### start_function_vars ###\n",
-    "### start_funcion_defined_vars ###\n",
-    "save_file_name = './BIU.py'\n",
-    "### end_funcion_defined_vars ###\n",
-    "text_file_name  = \"./Previsor_teste3.ipynb\"\n",
-    "### end_function_vars ###\n",
-    "\n",
-    "\n",
-    "\n",
-    "if not save_file_name:\n",
-    "    dir,file = os.path.split(os.path.abspath(text_file_name))\n",
-    "    file = file.split(\".\")[0]\n",
-    "    save_file_name = os.path.join(dir,f\"{file}.py\")\n",
-    "\n",
     "text = read_ipynb(text_file_name)\n",
-    "\n",
-    "text = re.sub(r\" *\\n\", '\\\\n', text, 0, re.MULTILINE)\n",
-    "text = re.sub(r\" {2,}\", ' ', text, 0, re.MULTILINE)\n",
-    "\n",
+    "#text = re.sub(r\" *\\n\", '\\\\n', text, 0, re.MULTILINE)\n",
+    "text = re.sub(r\"###\\n###\", '###\\\\n\\\\n###', text, 0, re.MULTILINE)\n",
+    "#text = re.sub(r\" {2,}\", ' ', text, 0, re.MULTILINE)\n",
     "text = re.sub(r\"display.*\", '', text, 0, re.MULTILINE)\n",
-    "text = re.sub(r\"\\\"\\\"\\\" ### include_on_script ###\\n(.*?)\\\"\\\"\\\"\", \"\\\\1\", text, 0, re.MULTILINE | re.DOTALL)\n",
-    "\n",
+    "text = re.sub(r\"\\\"\\\"\\\" ### include_on_script ###(.*?)\\\"\\\"\\\"\", \"\\\\1\", text, 0, re.MULTILINE | re.DOTALL)\n",
     "\n",
     "\n",
     "functions = re.findall(r\"#### start_function ###(.*?)\\n### end_function ###\",\n",
@@ -95,6 +100,7 @@
     "functions_code = {}\n",
     "\n",
     "test_function = \"\"\n",
+    "\n",
     "\n",
     "for function in functions:\n",
     "\n",
@@ -148,9 +154,9 @@
     "\n",
     "py_code+= \"\\nif __name__ == '__main__':\\n\"\n",
     "for line in test_function.split(\"\\n\"):\n",
-    "    py_code += \" \"*4 + line + \"\\n\"\n",
+    "    py_code += \"\\t\" + line + \"\\n\"\n",
     "\n",
-    "if not os.path.exists(save_file_name):\n",
+    "if not os.path.exists(save_file_name) or overwrite:\n",
     "    print(\"arquivo criado...\")\n",
     "    write_file(py_code,save_file_name)\n",
     "else:\n",
@@ -186,7 +192,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ff5ab5aeef423a334f99560c66ad68010afa0cd01c099fa68524cb04a5f985d0"
+    "hash": "480ca3e66d53f790d71f23a4e6fd5a0fb225c2e8e74302bbec1a2934ab7c2802"
    }
   }
  },
